--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,11 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-python-multipart==0.0.6
-chromadb
-sqlalchemy==2.0.23
+fastapi==0.115.9
+uvicorn
+pydantic
+pydantic-settings
+python-multipart
+chromadb==1.0.12 
+sqlalchemy
 aiosqlite
+mistralai
+python-dotenv
 
